force-app/main/default/objects/Picklist_Field__c/Picklist_Field__c.object-meta.xml
<CustomObject>
    <label>Picklist Field</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Picklist Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>