force-app/main/default/objects/Picklist_Field__c/fields/Field_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Developer_Name__c</fullName>
    <label>Field Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>