force-app/main/default/objects/Picklist_Field__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <referenceTo>Picklist__c</referenceTo>
    <relationshipLabel>Picklist Fields</relationshipLabel>
    <relationshipName>Picklist_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>